# LLVM-JIT-calculator

./: CMakeLists.txt  README.md  test.ll  test2.ll
cache/: 3  BasicOperators.cpp  CMakeLists.txt
src/: CMakeLists.txt  Formula.cpp  Formula.h  calc.l  calc.ypp  main.cpp
src/AST/: AST.cpp  AST.h  BinaryExprAST.cpp  BinaryExprAST.h  CMakeLists.txt  CallExprAST.cpp  CallExprAST.h  ExprAST.h  FunctionAST.cpp  FunctionAST.h  NumberExprAST.cpp  NumberExprAST.h  PrototypeAST.cpp  PrototypeAST.h  VariableExprAST.cpp  VariableExprAST.h
src/Engine/: NaiveJIT.h
src/include/: operators.h  utils.h
tests/: CMakeLists.txt  Formula-test.cpp  main.cpp
tests/AST/: AST-test.cpp  BinaryExprAST-test.cpp  CMakeLists.txt  FunctionAST-test.cpp  NumberExprAST-test.cpp
tests/Engine/: EngineTest.cpp
