set(BINARY ${CMAKE_PROJECT_NAME})

file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp)
find_package(glog REQUIRED CONFIG NAMES google-glog glog)
if (NOT TARGET glog::glog)
    find_library(LIB_glog NAMES glog)
else()
    set(LIB_glog glog::glog)
endif (NOT TARGET glog::glog)
find_package(gflags REQUIRED)
find_package(BISON)
find_package(FLEX)
BISON_TARGET(MyParser calc.ypp ${CMAKE_CURRENT_BINARY_DIR}/parser.cpp)
FLEX_TARGET(MyScanner calc.l  ${CMAKE_CURRENT_BINARY_DIR}/lexer.cpp)
ADD_FLEX_BISON_DEPENDENCY(MyScanner MyParser)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
set(SOURCES ${SOURCES})
message(STATUS "HELP")
message(STATUS ${SOURCES} )

add_executable(${BINARY}_run ${SOURCES}  ${BISON_MyParser_OUTPUTS} ${FLEX_MyScanner_OUTPUTS})

add_library(${BINARY}_lib STATIC ${SOURCES})
target_link_libraries(${BINARY}_run PUBLIC  ${LIB_glog} gflags ${llvm_libs})